<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/text_layout">

        <TextView
            android:id="@+id/txt_view"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/txt_display"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/default_text"
            android:textSize="30sp"
            style="@style/InvisibleFocusHolder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/text_layout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_color"
                android:text="@string/clear"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_division"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_color"
                android:text="@string/division"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_color"
                android:text="@string/multiply"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_color"
                android:text="del"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/seven"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/eight"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/nine"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_subtraction"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_color"
                android:text="@string/substraction"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/four"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/five"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/six"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_adition"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_color"
                android:text="@string/addition"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/one"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/two"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:text="@string/three"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".25"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_color"
                android:text="@string/dot"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_zero"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".50"
                android:background="@color/btn_color"
                android:textColor="@color/text_color"
                android:hapticFeedbackEnabled="true"
                android:text="@string/zero"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:layout_margin="3dp"
                android:layout_weight=".50"
                android:background="@color/equal_color"
                android:textColor="@color/text_color"
                android:text="@string/equal"
                android:textSize="30sp" />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>